--- a/radishsocks/CMakeLists.txt
+++ b/radishsocks/CMakeLists.txt
@@ -10,8 +10,8 @@ ${PROJECT_SOURCE_DIR}/radishsocks/camouflage
 add_subdirectory(crypto)
 add_subdirectory(camouflage)
 
-add_executable(rsserver server.c)
-target_link_libraries(rsserver rscrypto rscamouflage)
+add_executable(rsserver server.c log.c)
+target_link_libraries(rsserver rscrypto rscamouflage event)
 
-add_executable(rsclient client.c)
-target_link_libraries(rsclient rscrypto rscamouflage)
+add_executable(rsclient client.c log.c)
+target_link_libraries(rsclient rscrypto rscamouflage event)
