--- a/radishsocks/CMakeLists.txt
+++ b/radishsocks/CMakeLists.txt
@@ -1,4 +1,4 @@
 AUX_SOURCE_DIRECTORY(. SRC)
 
 add_executable(rssocks ${SRC})
-target_link_libraries(rssocks event tcmalloc)
+target_link_libraries(rssocks event libtcmalloc.a stdc++ m pthread)
