--- a/radishsocks/CMakeLists.txt
+++ b/radishsocks/CMakeLists.txt
@@ -1,4 +1,9 @@
 AUX_SOURCE_DIRECTORY(. SRC)
 
 add_executable(rssocks ${SRC})
-target_link_libraries(rssocks event tcmalloc_minimal)
+
+if (TCMALLOC)
+    target_link_libraries(rssocks event tcmalloc_minimal)
+else()
+    target_link_libraries(rssocks event)
+endif()
